[package]
name = "initrz"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
bstr = "1.7.0"
dowser = "0.8.1"
either = "1.9.0"
glob = "0.3.1"
libc = "0.2.150"
log = "0.4.20"
libblkid-rs = "0.3.1"
libcryptsetup-rs = "0.9.1"
mount-api = "0.1.1"
netlink-sys = "0.8.5"
nix = { version = "0.27.1", features = ["fs", "kmod"] }
rayon = "1.8.0"
rpassword = "7.2.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
simplelog = "0.12.1"
xz2 = "0.1.7"
file-format = "0.22.0"
zstd = "0.13.0"

