[package]
name = "initrz"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
bstr = "0.2"
dowser = "0.2"
either = "1.6"
futures = { version = "0.3", features = ["thread-pool"] }
glob = "0.3"
libc = "0.2"
log = "0.4"
libblkid-rs = "0.1"
libblkid-rs-sys = "0.1"
libcryptsetup-rs = "0.4"
mount-api = "0.1"
netlink-sys = "0.6"
nix = "0.20"
rayon = "1.5"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simplelog = "0.10"

