[package]
name = "mkinitrz"
version = "0.1.0"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }
dowser = "0.2"
libc = "0.2"
log = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
simplelog = "0.10"
xz2 = "0.1"
zstd = "0.7"

[dependencies.object]
version = "0.23.0"
default-features = false
features = ["elf", "read_core", "std"]

